Surpress warning on java